@@ -36,6 +36,7 @@ confusion and fear), to encourage their use.
 - Only allow change of /lib/user with command-line option.
 - Removed hilite_player option. (Always off)
 - Moved crown to external file.
+- Removed macros.
 
 Coding changes
 ==============
